# uv-dev-container

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-ci.yml
